# PicoBackingtracksTransport

./: .gitignore  README.md  install_remote_script.sh  main.cpp  scratch  tusb_config.h  usb_descriptors.c
.github/workflows/: Deploy.yaml  build.yml  deploy.yaml
ableton_remote/NiklasBTControl/: __init__.py  component.py  elements.py  logger.py
ableton_remote/NiklasBTT/: NiklasBTT.py
src/: CMakeLists.txt  Cmakelists.txt  buttons.cpp  led.cpp  main.cpp  main.h  midi.cpp  usb_descriptors.c
